[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nyx-bot"
version = "0.0.1"
description = "A matrix bot to do amazing things!"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matrix-nio>=0.10.0",
    "Markdown>=3.1.1",
    "PyYAML>=5.1.2",
    "tomli >= 1.1.0; python_version < \"3.11\"",
    "Wand",
    "python-magic",
    "peewee",
    "python-dateutil",
    "wordcloud",
    "aiohttp",
    "xxhash",
]
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
postgres = ["psycopg2>=2.8.5"]
dev = [
    "isort==5.0.4",
    "flake8==3.8.3",
    "flake8-comprehensions==3.2.3",
    "black==22.6.0",
]
e2e = ["matrix-nio[e2e]>=0.10.0"]

[project.scripts]
nyx-bot = "nyx_bot:run"

# Setuptools
[tool.setuptools]
packages = ["nyx_bot"]
